small formatting fix

--- a/dynamic_model/pump_transient_benchmark/pump_transients.ipynb
+++ b/dynamic_model/pump_transient_benchmark/pump_transients.ipynb
@@ -22,7 +22,7 @@
     "where $n_0$ is the value of $n(t)$ at criticality. In this case, the kinetics are normalized such that $n_0 = 1.0$. This means that deviations in $n(t)$ naturally correspond to units of reactivity. The dynamics of the control input can then be described by taking the derivative of this expression, and setting a maximum derivative corresponding to the maximum insertion rate of the MSRE control rod, i.e.\n",
     "\n",
     "$\n",
-    "\\frac{d\\rho_{control}}{dt} = \\text{min} \\{ \\text{max} \\{ \\frac{dn(t)}{dt}, -29.0 pcm \\}, 29.0 pcm \\} \n",
+    "\\frac{d\\rho_{control}}{dt} = \\text{min} \\{ \\text{max} \\{ \\frac{dn(t)}{dt}, -29.0 \\text{ pcm} \\}, 29.0 \\text{ pcm} \\} \n",
     "$\n"
    ]
   },
